--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         volumes:
             - .:/var/www/html
             - vendor:/var/www/html/vendor
+            - node_modules:/var/www/html/node_modules
         depends_on:
             - db
         restart: always
@@ -48,3 +49,4 @@ networks:
 
 volumes:
     vendor:
+    node_modules:
