--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mariadb
 DB_HOST=mariadb
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=breaking_task
 DB_USERNAME=sail
 DB_PASSWORD=password
 
