--- a/docker/8.3/supervisord.conf
+++ b/docker/8.3/supervisord.conf
@@ -1,8 +1,14 @@
+[unix_http_server]
+file=/var/run/supervisor.sock
+chmod=0700
+chown=root:root
+
 [supervisord]
 nodaemon=true
 user=root
-logfile=/var/log/supervisor/supervisord.log
+logfile=/var/www/html/storage/logs/supervisord.log
 pidfile=/var/run/supervisord.pid
+minfds=10000
 
 [program:php]
 command=%(ENV_SUPERVISOR_PHP_COMMAND)s
@@ -12,3 +18,13 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:vite]
+command=npm run dev
+directory=/var/www/html
+autostart=true
+autorestart=true
+user=sail
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
